# sudoku

./: README.md  pyproject.toml
app/: __init__.py  routes.py  sudoku.py
tests/: test_routes.py
